phase 0 is done

--- a/hub/dialysis/access.html
+++ b/hub/dialysis/access.html
@@ -26,44 +26,83 @@
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
 <div data-include="/includes/dialysis-subnav.html"></div>
-      <h1>Dialysis Access Options</h1>
-      <p>
-        There are two main types of vascular access used for hemodialysis: <strong>catheters</strong> and <strong>fistulas</strong>. Some people may also have a graft, which is less common.
-      </p>
+<h1>Hemodialysis Access: Catheter, Fistula, Graft</h1>
+<p>
+  Hemodialysis needs a reliable way to move blood in and out. You’ll hear about three options:
+  a <strong>catheter</strong> (temporary), a <strong>fistula</strong> (preferred long-term), or a <strong>graft</strong> (when veins aren’t ideal).
+  Peritoneal dialysis uses a different access (abdominal catheter) and isn’t covered here.
+</p>
 
-      <h2>Catheters</h2>
-      <p>
-        Catheters are flexible tubes inserted into a large vein, usually in the chest. They’re often used when dialysis needs to begin quickly.
-      </p>
-      <ul>
-        <li>Quick to place, used for short-term access</li>
-        <li>Higher risk of infection and clotting</li>
-        <li>Requires special care and cleaning</li>
-      </ul>
+<h2>Quick compare</h2>
+<ul>
+  <li><strong>Catheter (neck/chest):</strong> fastest to use; highest infection/clot risk; for urgent starts or while a permanent access heals.</li>
+  <li><strong>Fistula (AVF):</strong> artery joined to a vein in the arm; lowest infection risk; can last years; takes time to “mature.”</li>
+  <li><strong>Graft (AVG):</strong> soft synthetic tube joining artery to vein; ready sooner than a fistula; more stenosis/infection than AVF.</li>
+</ul>
 
-      <h2>Fistulas</h2>
-      <p>
-        A fistula is a connection made between an artery and a vein, usually in the arm. It takes a few months to heal but is the preferred access for long-term dialysis.
-      </p>
-      <ul>
-        <li>Lower infection risk</li>
-        <li>Lasts longer than a catheter</li>
-        <li>Needs time to "mature" before use</li>
-      </ul>
+<h2>Catheters</h2>
+<p>
+  Flexible tubes placed in a large vein (often chest). Common when dialysis must start now.
+  Some are temporary (ICU/neck); most outpatient lines are <em>tunneled</em> with cuffs to reduce infection.
+</p>
+<ul>
+  <li><strong>Pros:</strong> can use immediately; no needles.</li>
+  <li><strong>Cons:</strong> higher infection and clot risk; lower blood flows; can limit showers and activities.</li>
+  <li><strong>Care:</strong> keep dressing clean/dry; no submerging (pools, tubs); avoid tugging; never flush at home.</li>
+  <li><strong>Goal:</strong> plan a fistula or graft ASAP so the catheter can be removed.</li>
+</ul>
 
-      <h2>Grafts</h2>
-      <p>
-        A graft uses a soft tube to connect an artery to a vein. It’s used when veins aren’t suitable for a fistula.
-      </p>
-      <ul>
-        <li>Used when veins are too small or damaged</li>
-        <li>Heals faster than a fistula</li>
-        <li>Higher complication rate than a fistula</li>
-      </ul>
+<h2>Fistulas (AVF)</h2>
+<p>
+  A small outpatient surgery connects an artery to a vein—usually in the forearm or upper arm. Over weeks, the vein gets thicker and easier to use.
+</p>
+<ul>
+  <li><strong>Timeline:</strong> often 6–12 weeks to mature (varies). Your team will check size/flow before first cannulation.</li>
+  <li><strong>Daily check:</strong> feel a gentle <em>vibration</em> (thrill) over the fistula. Call if it’s weak or gone.</li>
+  <li><strong>Protect the arm:</strong> no blood pressure, IVs, tight watches/jewelry, or heavy lifting until cleared.</li>
+  <li><strong>During treatment:</strong> needle techniques include rope-ladder or buttonhole (center policy varies).</li>
+  <li><strong>Watch for:</strong> prolonged bleeding after needle removal, bulging areas that keep growing, numb/cold fingers, hand pain with use.</li>
+</ul>
 
-      <p>
-        The best access depends on your health, vein quality, and how urgently dialysis is needed.
-      </p>
+<h2>Grafts (AVG)</h2>
+<p>
+  A soft synthetic tube connects an artery to a vein—useful when veins are too small/damaged for a fistula.
+</p>
+<ul>
+  <li><strong>Timeline:</strong> often ready in ~2–4 weeks (surgeon confirms).</li>
+  <li><strong>Care:</strong> same arm protections as a fistula; avoid pressure over the graft.</li>
+  <li><strong>Watch for:</strong> redness, warmth, tender lumps, prolonged bleeding, or new high-pitched “whistling” sound (may signal narrowing).</li>
+</ul>
+
+<h2>Choosing & timeline</h2>
+<ul>
+  <li><strong>Urgent start:</strong> catheter now, plan fistula (first choice) or graft as soon as possible.</li>
+  <li><strong>Planned start:</strong> vein mapping ultrasound → fistula if feasible; graft if not.</li>
+  <li><strong>After creation:</strong> you may get hand/forearm exercises to help a fistula mature—follow your surgeon’s guidance.</li>
+</ul>
+
+<h2>Access care basics</h2>
+<ul>
+  <li>Keep skin clean; follow dressing instructions. Don’t scratch scabs at needle sites.</li>
+  <li>Warm the arm before cannulation (per clinic routine) to help veins open up.</li>
+  <li>After treatment, hold gentle pressure—don’t peek. Report bleeding that won’t stop.</li>
+  <li>Sleep with the access arm uncrowded—no body weight on it; avoid tight sleeves.</li>
+</ul>
+
+<h2>When to call</h2>
+<ul>
+  <li><strong>Right away:</strong> fever/chills, spreading redness, pus, foul odor, or sudden loss of thrill (fistula/graft).</li>
+  <li><strong>Soon:</strong> new severe hand pain, cold/numb fingers, prolonged bleeding (&gt;20 minutes), swelling that’s getting worse, or a catheter dressing that gets soaked or pulled loose.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> Which access is best for me and why? What’s my target timeline? How will we check if the fistula/graft is ready? What are my “call now” signs?</p>
+</div>
+
+<p class="disclaimer">Educational only. Your surgeon and dialysis team will tailor access choice and care to you.</p>
+
+<p>See also: <a href="/hub/dialysis/schedule.html" data-evt="dialysis:to-schedule">Dialysis Schedule</a> · <a href="/hub/dialysis/side-effects.html" data-evt="dialysis:to-side-effects">Side Effects & Safety</a></p>
+
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
