--- a/hub/dialysis/index.html
+++ b/hub/dialysis/index.html
@@ -26,60 +26,63 @@
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
 <div data-include="/includes/dialysis-subnav.html"></div>
-  <h1>Dialysis Hub</h1>
+<h1>Dialysis Hub</h1>
+<p>
+  Dialysis replaces some of the work of your kidneys when they can’t keep up.
+  This section focuses on in-center hemodialysis: what to expect, who you’ll meet, and
+  simple routines that make treatments easier.
+</p>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/dialysis/staff/index.html" data-evt="dialysis:index:staff">Clinic Staff Roles</a></h2>
   <p>
-    Dialysis replaces the work of your kidneys when they can no longer filter your 
-    blood effectively. This section covers what to expect, who you'll meet, and 
-    how to navigate treatment with confidence.
+    Meet the team you’ll see most—nurses, techs, social worker, dietitian, and nephrologist—
+    and what each person handles.
   </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="/hub/dialysis/staff/index.html">Clinic Staff Roles</a></h2>
-    <p>
-      Meet the team who will guide you through each dialysis session — nurses, 
-      techs, social workers, and doctors — and learn what each person does.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="access.html" data-evt="dialysis:index:access">Access Options: Catheter, Fistula, Graft</a></h2>
+  <p>
+    How dialysis connects to your bloodstream, healing timelines, daily care, and when to call for help.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="access.html">Access Types: Catheter, Fistula, Graft</a></h2>
-    <p>
-      Discover the different ways dialysis can connect to your bloodstream, 
-      how each type works, and what to expect during healing and care.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="machine.html" data-evt="dialysis:index:machine">The Dialysis Machine</a></h2>
+  <p>
+    A plain-English tour: blood circuit, dialyzer, ultrafiltration, common alarms, and what the screen numbers mean.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="expectations.html">What to Expect at the Clinic</a></h2>
-    <p>
-      From your first visit to your hundredth, understand the clinic setup, 
-      the machines, and the routine that helps keep you healthy.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="expectations.html" data-evt="dialysis:index:expectations">What to Expect</a></h2>
+  <p>
+    First-month rhythm, chair comfort tips, dry-weight goals, and how the visit flows from check-in to wrap-up.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="schedule.html">Treatment Schedule & Transportation</a></h2>
-    <p>
-      Learn how often dialysis happens, how long it lasts, and tips for 
-      managing rides and daily routines around your treatment schedule.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="schedule.html" data-evt="dialysis:index:schedule">Schedule & Planning</a></h2>
+  <p>
+    Common shift patterns, picking a time that fits work and rides, travel planning, and weather back-ups.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="side-effects.html">Common Side Effects</a></h2>
-    <p>
-      Fatigue, cramping, and other side effects can happen — this guide 
-      helps you recognize them early and know when to ask for help.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="side-effects.html" data-evt="dialysis:index:side-effects">Side Effects & Safety</a></h2>
+  <p>
+    Cramps, low BP, “dialysis hangover,” needles/access issues, simple fixes, and clear “when to call” rules.
+  </p>
+</section>
 
-  <section class="callout">
-    <p>
-      You don’t need to know everything on day one. 
-      Start here, learn at your own pace, and find out which questions 
-      to ask so you feel more prepared and supported.
-    </p>
-  </section>
+<section class="callout">
+  <p>
+    You don’t need to learn it all at once. Start with the page you need today, jot questions,
+    and bring them to your next session—small tweaks make a big difference.
+  </p>
+</section>
+
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
