--- a/hub/dialysis/schedule.html
+++ b/hub/dialysis/schedule.html
@@ -26,33 +26,91 @@
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
 <div data-include="/includes/dialysis-subnav.html"></div>
-      <h1>Dialysis Schedule & Timing</h1>
+<h1>Dialysis Schedule & Planning</h1>
+<p>
+  A steady schedule makes treatments easier on your body and your life. Most people do in-center hemodialysis
+  three times per week; the key is consistency and small routines that reduce stress.
+</p>
 
-      <p>
-        In-center hemodialysis typically happens three times a week — either Monday-Wednesday-Friday or Tuesday-Thursday-Saturday. Each session lasts about 3.5 to 4 hours, not including setup and recovery time.
-      </p>
+<h2>Your basic options</h2>
+<ul>
+  <li><strong>Standard shifts (3×/week):</strong> Mon–Wed–Fri or Tue–Thu–Sat; start times vary by center (early morning, midday, late).</li>
+  <li><strong>Long nights (“nocturnal”):</strong> fewer centers offer this; slower, longer sessions overnight can feel gentler.</li>
+  <li><strong>Home dialysis:</strong> separate program (more flexibility). Ask about training if you want more control.</li>
+</ul>
 
-      <h2>Session Start Times</h2>
-      <p>
-        Clinics often have multiple shifts starting as early as 5 or 6 a.m. and ending in the evening. You’ll be assigned a regular shift and expected to arrive on time every time.
-      </p>
+<h2>How a treatment day flows</h2>
+<ul>
+  <li><strong>Arrive early:</strong> a few minutes for check-in, weight, BP, and a quick symptom review.</li>
+  <li><strong>On machine:</strong> usually 3–5 hours depending on your prescription.</li>
+  <li><strong>Coming off:</strong> rinse-back, needles out, hold pressure, re-check weight/BP (plan ~20–30 minutes).</li>
+  <li><strong>After:</strong> give yourself a low-effort window. Many people walk a bit, snack, and rest.</li>
+</ul>
 
-      <h2>Rescheduling</h2>
-      <p>
-        Most centers require at least 24-hour notice for any missed or rescheduled appointments. Missing treatments can seriously affect your health — toxins and fluid build up quickly.
-      </p>
+<h2>Picking a shift that fits</h2>
+<ul>
+  <li><strong>Work/school:</strong> ask for first or last shift to protect your job hours and commute.</li>
+  <li><strong>Rides:</strong> align start/end with your reliable transportation (family, paratransit, rideshare).</li>
+  <li><strong>Energy:</strong> some feel best early; others prefer later—try for 2–3 weeks before switching.</li>
+</ul>
 
-      <h2>Other Scheduling Considerations</h2>
-      <ul>
-        <li>💧 <strong>Fluid intake:</strong> Between treatments, fluid builds up in your body. Going more than 2 days without dialysis (like over a weekend) often means more fluid to remove, which can lead to cramps or low blood pressure.</li>
-        <li>💉 <strong>Lab work:</strong> Monthly labs are often drawn before your session. Sometimes this affects the start time or prep.</li>
-        <li>🧾 <strong>Doctor visits:</strong> Nephrologists often do quick rounds at the clinic — usually monthly — during your treatment time.</li>
-      </ul>
+<h2>Week-to-week rhythm</h2>
+<ul>
+  <li><strong>Early week (Mon/Tue):</strong> weekend gaps can mean more fluid/weight to remove—arrive hydrated and eat a small snack.</li>
+  <li><strong>Midweek:</strong> often smoother; review any cramps or low BP with the team and adjust.</li>
+  <li><strong>End of week (Fri/Sat):</strong> ask about weekend plans—fluids, salt, and activity so Monday/Tuesday isn’t rough.</li>
+</ul>
 
-      <h2>Tips for Managing Your Time</h2>
-      <p>
-        Plan for about 5–6 hours total door-to-door. Many people bring books, headphones, or small projects. Tell work or caregivers your schedule in advance. Dialysis becomes part of your weekly routine — it’s demanding, but predictable.
-      </p>
+<h2>Planning around life</h2>
+<ul>
+  <li><strong>Holidays & appointments:</strong> tell the front desk early—centers can sometimes shift you to another day/shift.</li>
+  <li><strong>Travel:</strong> visitor dialysis is common; start requests 2–3 weeks in advance (longer for holidays). Your social worker can help fax orders and labs.</li>
+  <li><strong>Weather/back-up:</strong> swap phone numbers with the unit, know storm policies, and keep a ride back-up plan.</li>
+</ul>
+
+<h2>If you miss or cut short</h2>
+<ul>
+  <li><strong>Call the clinic right away.</strong> They may add time next session, schedule a make-up, or adjust fluid removal.</li>
+  <li><strong>Watch symptoms:</strong> shortness of breath, swelling, or chest pressure—report immediately.</li>
+  <li><strong>Don’t “double up” fluids or skip medicines</strong> without instructions—ask what to do safely.</li>
+</ul>
+
+<h2>What to bring</h2>
+<ul>
+  <li>Comfort: light blanket, layers, neck pillow, headphones, charger.</li>
+  <li>Practical: access arm warmers, lip balm, small snack (if allowed), a water bottle sized to your fluid plan.</li>
+  <li>Info: medication list with exact times, new prescriptions since last visit, questions for the team.</li>
+</ul>
+
+<h2>Small habits that help</h2>
+<ul>
+  <li><strong>Calendar it:</strong> put all sessions in your phone with alarms; add “leave by” reminders.</li>
+  <li><strong>Evening prep:</strong> lay out clothes, badge/keys, and a small go-bag the night before.</li>
+  <li><strong>Between runs:</strong> spread fluids through the day; keep salt low to reduce cramps and low BP.</li>
+  <li><strong>Log it:</strong> jot post-run symptoms (cramps, dizziness) to fine-tune your next treatment.</li>
+</ul>
+
+<h2>People who can help with scheduling</h2>
+<ul>
+  <li><strong>Charge nurse/front desk:</strong> day-to-day shift swaps and time changes.</li>
+  <li><strong>Social worker:</strong> rides, paratransit, work forms, travel coordination.</li>
+  <li><strong>Nephrologist/dietitian:</strong> adjust time/ultrafiltration targets and weekly fluid/meal plans.</li>
+</ul>
+
+<h2>When to call (don’t wait)</h2>
+<ul>
+  <li><strong>Now:</strong> you can’t make your session, new fever/redness at access, bleeding that won’t stop, severe cramps or chest pain, shortness of breath.</li>
+  <li><strong>ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, fainting.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> Can I try a different shift for two weeks? What’s the plan if I cramp or get dizzy? How do we handle holidays, storms, or travel?</p>
+</div>
+
+<p class="disclaimer">Educational only. Your dialysis team will tailor scheduling and goals to you.</p>
+
+<p>See also: <a href="/hub/dialysis/expectations.html" data-evt="dialysis:to-expectations">What to Expect</a> · <a href="/hub/dialysis/access.html" data-evt="dialysis:to-access">Access Options</a> · <a href="/hub/dialysis/side-effects.html" data-evt="dialysis:to-side-effects">Side Effects & Safety</a></p>
+
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
