--- a/hub/dialysis/side-effects.html
+++ b/hub/dialysis/side-effects.html
@@ -26,50 +26,93 @@
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
 <div data-include="/includes/dialysis-subnav.html"></div>
-      <h1>Common Side Effects of Dialysis</h1>
+<h1>Dialysis Side Effects &amp; Safety</h1>
+<p>
+  Most side effects are manageable once you know the pattern and speak up early. This page covers common issues
+  during and after in-center hemodialysis and simple ways to reduce them.
+</p>
 
-      <p>
-        Dialysis is lifesaving — but it can come with side effects. Understanding what’s normal and what’s not can help you stay ahead of issues and advocate for your care.
-      </p>
+<h2>Common during or after treatment</h2>
+<ul>
+  <li><strong>Low blood pressure (light-headed, woozy, cold sweat):</strong>
+    <ul>
+      <li><em>Now:</em> tell staff; they can lower fluid removal, recline you, give fluids, and warm you.</li>
+      <li><em>Next time:</em> arrive close to your <strong>dry weight</strong>, spread fluids/salt between runs, ask about a slower or longer session, and med timing (BP pills may need adjusting).</li>
+    </ul>
+  </li>
+  <li><strong>Muscle cramps (legs, feet, hands):</strong>
+    <ul>
+      <li><em>Now:</em> slow fluid removal, gentle stretches, warmth; small saline per clinic policy.</li>
+      <li><em>Next time:</em> smaller fluid gains, review dry weight and session length, warm the access arm, ask about magnesium/potassium levels if frequent.</li>
+    </ul>
+  </li>
+  <li><strong>Headache or nausea:</strong>
+    <ul>
+      <li><em>Now:</em> anti-nausea meds, slower fluid removal, snacks if allowed.</li>
+      <li><em>Next time:</em> steadier fluid/salt between runs; ask about dialysate settings, cool dialysate, or med timing.</li>
+    </ul>
+  </li>
+  <li><strong>“Dialysis hangover” (fatigue/fog after):</strong>
+    <ul>
+      <li><em>Now:</em> hydrate as directed, light snack, planned rest window.</li>
+      <li><em>Next time:</em> discuss longer/slower sessions, dry-weight tweaks, and anemia management.</li>
+    </ul>
+  </li>
+  <li><strong>Itchy skin:</strong>
+    <ul>
+      <li><em>Now:</em> fragrance-free moisturizer; avoid hot showers.</li>
+      <li><em>Next time:</em> ask about phosphorus control, binders, and other causes (dryness, allergies).</li>
+    </ul>
+  </li>
+  <li><strong>Restless legs or trouble sleeping:</strong>
+    <ul>
+      <li>Short walks, calf stretches, limit caffeine late; ask about iron and other contributors.</li>
+    </ul>
+  </li>
+</ul>
 
-      <h2>🌀 Fatigue</h2>
-      <p>
-        Feeling wiped out after a session is common, especially if you lost a lot of fluid or had a crash. Try not to schedule major activities right after dialysis if you can help it.
-      </p>
+<h2>Needles &amp; access issues</h2>
+<ul>
+  <li><strong>Sore or bruised sites:</strong> normal early on; rotate sites (rope-ladder) or ask about buttonhole policy.</li>
+  <li><strong>Infiltration (needle slips, swelling/bruise):</strong>
+    <ul>
+      <li><em>Now:</em> stop the treatment at that site; cold pack first 24 hours, then warm compresses.</li>
+      <li><em>Next time:</em> review needle angle/technique and site selection.</li>
+    </ul>
+  </li>
+  <li><strong>Bleeding after needles out:</strong> hold steady pressure; don’t peek. If bleeding won’t stop after ~20 minutes, tell staff.</li>
+  <li><strong>Fistula/graft changes:</strong> loss of the <em>thrill</em> vibration, new whistling sound, swelling, red/tender spots—report promptly.</li>
+  <li><strong>Catheters:</strong> keep dressing clean/dry, don’t tug or get it wet; fever or chills can mean infection—call now.</li>
+</ul>
 
-      <h2>😵 Low Blood Pressure (Hypotension)</h2>
-      <p>
-        Symptoms include dizziness, nausea, muscle cramping, or even temporary vision or hearing loss. Caused by pulling too much fluid too fast. Let your team know if this keeps happening — your dry weight or treatment time may need adjusting.
-      </p>
+<h2>Infection prevention (simple habits)</h2>
+<ul>
+  <li>Clean hands before treatment; keep access skin clean and dry between sessions.</li>
+  <li>Don’t scratch scabs; avoid tight clothes/pressure on the access.</li>
+  <li>Report fever, chills, spreading redness, pus, foul odor, or new pain along the access path.</li>
+</ul>
 
-      <h2>💢 Muscle Cramps</h2>
-      <p>
-        Sudden painful cramps, usually in the legs or feet, can happen during or after treatment. Often linked to fluid shifts or electrolyte changes.
-      </p>
+<h2>Medicines that can drive symptoms</h2>
+<ul>
+  <li><strong>Blood-pressure meds:</strong> timing may need changes to avoid lows during treatment.</li>
+  <li><strong>Phosphate binders:</strong> can cause constipation or nausea—tell your team.</li>
+  <li><strong>New prescriptions:</strong> always inform the dialysis team; some drugs affect blood pressure, potassium, or bleeding.</li>
+</ul>
 
-      <h2>💉 Access Site Pain or Infection</h2>
-      <p>
-        Redness, swelling, warmth, or drainage near your catheter or fistula may be signs of infection. Don’t ignore this — it can escalate fast.
-      </p>
+<h2>When to call (don’t wait)</h2>
+<ul>
+  <li><strong>Call the clinic now:</strong> fever or chills, new redness/pus at access, bleeding that won’t stop, severe cramps, chest pain or new shortness of breath, sudden loss of fistula/graft <em>thrill</em>.</li>
+  <li><strong>ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, or you pass out.</li>
+</ul>
 
-      <h2>💊 Itching or Restless Legs</h2>
-      <p>
-        Dry skin or buildup of waste products between sessions can cause intense itching. Restless legs are also common, especially at night.
-      </p>
+<div class="callout">
+  <p><strong>Questions to ask:</strong> What’s my current dry-weight goal? How can we tweak time/ultrafiltration to reduce cramps or low BP? Which symptoms mean “call now,” and who answers after hours?</p>
+</div>
 
-      <h2>🧠 Brain Fog</h2>
-      <p>
-        Trouble concentrating, forgetfulness, or “dialysis hangover” is real. If it’s affecting daily life, bring it up with your team.
-      </p>
+<p class="disclaimer">Educational only. Your dialysis team will tailor prevention and treatment to you.</p>
 
-      <h2>😔 Emotional Effects</h2>
-      <p>
-        Depression and anxiety are common and valid responses to life on dialysis. Social workers and peer support groups can help — you don’t have to tough it out alone.
-      </p>
+<p>See also: <a href="/hub/dialysis/expectations.html" data-evt="dialysis:to-expectations">What to Expect</a> · <a href="/hub/dialysis/access.html" data-evt="dialysis:to-access">Access Options</a> · <a href="/hub/dialysis/schedule.html" data-evt="dialysis:to-schedule">Schedule & Planning</a></p>
 
-      <p>
-        Not every symptom means something is wrong, but nothing should be dismissed. Keep track of patterns and speak up when something feels off.
-      </p>
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
