--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <li><a href="start-here.html">Start Here</a> — where to begin, especially if you're new</li>
       <li><a href="book.html">Book: Tito Needs a Kidney</a> — read about the story that started it all</li>
       <li><a href="donor-info.html">Donor Info</a> — facts and risks for people considering donation</li>
-      <li><a href="dialysis.html">Dialysis Hub</a> — how it works, what to expect, and who’s involved</li>
-      <li><a href="transplant.html">Transplant Hub</a> — evaluation, surgery, and post-transplant life</li>
+      <li><a href="/hub/dialysis/index.html">Dialysis Hub</a> — how it works, what to expect, and who’s involved</li>
+      <li><a href="/hub/transplant/index.html">Transplant Hub</a> — evaluation, surgery, and post-transplant life</li>
     </ul>
 
     <p>Everything here is organized so you don’t have to feel overwhelmed. Take what helps. Leave what doesn’t. Ask for more if something’s missing.</p>
