--- a/hub/dialysis/expectations.html
+++ b/hub/dialysis/expectations.html
@@ -26,45 +26,96 @@
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
 <div data-include="/includes/dialysis-subnav.html"></div>
-      <h1>What to Expect During Dialysis</h1>
+<h1>Dialysis: What to Expect</h1>
+<p>
+  The first month is about finding your rhythm: a steady schedule, a comfortable chair setup,
+  and small habits that make treatments easier. Plans vary by center—this is a plain-English overview.
+</p>
 
-      <p>
-        Starting dialysis can be overwhelming. Here’s what a typical in-center hemodialysis day looks like, so you know what to expect.
-      </p>
+<h2>Your weekly rhythm</h2>
+<ul>
+  <li><strong>Schedule:</strong> most people go 3 days/week (e.g., Mon–Wed–Fri or Tue–Thu–Sat).</li>
+  <li><strong>Session length:</strong> usually 3–5 hours on the machine, plus check-in and wrap-up.</li>
+  <li><strong>Energy curve:</strong> you may feel tired after; many people plan quiet time post-treatment.</li>
+</ul>
 
-      <h2>Arrival & Check-In</h2>
-      <p>
-        You’ll arrive at your scheduled time and check in at the front desk. A tech will weigh you and take your temperature, blood pressure, and other vitals.
-      </p>
+<h2>First visit flow (typical)</h2>
+<ul>
+  <li><strong>Check-in:</strong> weight, blood pressure (BP), symptoms, any new meds or changes.</li>
+  <li><strong>Access prep:</strong> catheter dressing check or fistula/graft cleaning; numbing if used.</li>
+  <li><strong>Needles (if AVF/AVG):</strong> two needles go in—one pulls blood to the dialyzer, one returns it.</li>
+  <li><strong>Heparin:</strong> a blood-thinner during treatment to keep the circuit from clotting.</li>
+  <li><strong>During treatment:</strong> BP and symptoms watched; fluid removal (ultrafiltration) adjusted to keep you comfortable.</li>
+  <li><strong>Coming off:</strong> needles out with pressure and bandages; re-check weight and BP; a brief look for bleeding or dizziness.</li>
+</ul>
 
-      <h2>Setup & Needle Insertion</h2>
-      <p>
-        A dialysis nurse or technician will prep your access site — cleaning it and inserting the needles (or connecting the catheter). This part can be uncomfortable, especially early on.
-      </p>
+<h2>Comfort & routine in the chair</h2>
+<ul>
+  <li><strong>Clothing:</strong> sleeves that roll up easily; layers—rooms can feel cool.</li>
+  <li><strong>Setup:</strong> pillow/blanket, headphones, a book or show downloaded, charger.</li>
+  <li><strong>Motion:</strong> gentle ankle pumps and wiggles help reduce cramps; ask what’s OK with your access.</li>
+  <li><strong>Food & drink:</strong> centers differ—ask what’s allowed during treatment.</li>
+</ul>
 
-      <h2>Treatment Time</h2>
-      <p>
-        Hemodialysis usually takes about 3.5 to 4 hours. You’ll sit in a recliner with your blood cycling through the machine. Most centers provide:
-      </p>
-      <ul>
-        <li>TVs or tablets for entertainment</li>
-        <li>Blankets (but you can bring your own)</li>
-        <li>Limited snacks or drinks, depending on policy</li>
-      </ul>
+<h2>Access basics (quick)</h2>
+<ul>
+  <li><strong>Catheter:</strong> keep dressing clean/dry; no tugs; report fever or redness.</li>
+  <li><strong>Fistula/Graft:</strong> protect the arm (no BP/IVs), feel the <em>thrill</em> daily; call if it’s weak/gone.</li>
+  <li><strong>Needling style:</strong> rope-ladder or buttonhole—your center will explain what they use and why.</li>
+</ul>
 
-      <h2>After Dialysis</h2>
-      <p>
-        Once the session ends, the nurse or tech will remove the needles and stop any bleeding. You’ll be weighed again, and your post-dialysis vitals will be recorded.
-      </p>
+<h2>Fluid, weight, and “dry weight”</h2>
+<ul>
+  <li><strong>Target (dry) weight:</strong> your “no-extra-fluid” weight—dialysis aims to bring you close to this.</li>
+  <li><strong>Between sessions:</strong> many people limit fluid and salt to avoid large gains (which can cause cramps and low BP).</li>
+  <li><strong>Tips:</strong> smaller sips spread out, ice chips, lemon wedges, sugar-free gum, and lower-salt meals help thirst.</li>
+</ul>
 
-      <h2>How You Might Feel</h2>
-      <p>
-        It’s common to feel tired, cold, or lightheaded after treatment. Some people need a nap, others bounce back quickly. Stay hydrated and watch for cramps or headaches — those may signal too much fluid was removed.
-      </p>
+<h2>Common feelings & fixes</h2>
+<ul>
+  <li><strong>Low BP/light-headed:</strong> tell staff; they can lower fluid removal, lay you back, give fluids, or adjust next time.</li>
+  <li><strong>Cramps:</strong> slow fluid removal, warmth, gentle stretches; ask about tweaks for the next session.</li>
+  <li><strong>“Dialysis hangover” (fatigue, fog):</strong> hydrate as directed, a snack after, and a planned rest window often help.</li>
+  <li><strong>Itchy skin:</strong> moisturize; ask about phosphorus control and other causes if persistent.</li>
+</ul>
 
-      <p>
-        Over time, you’ll get used to the process. Every center runs a little differently, but most follow the same structure. Ask questions. Speak up if something doesn’t feel right.
-      </p>
+<h2>Labs & medicines (clinic side)</h2>
+<ul>
+  <li><strong>Monthly labs:</strong> hemoglobin, iron markers, electrolytes, albumin, and more to fine-tune care.</li>
+  <li><strong>In-center meds:</strong> some get IV iron or ESA injections; nurses will explain timing and side effects.</li>
+  <li><strong>At home:</strong> phosphate binders with meals/snacks, BP meds, vitamins—bring a list with exact times/doses.</li>
+</ul>
+
+<h2>Between treatments</h2>
+<ul>
+  <li><strong>Track:</strong> daily weight, home BP (if you have a cuff), swelling, shortness of breath, new symptoms.</li>
+  <li><strong>Meals:</strong> balanced protein, mindful sodium; ask the dietitian for a simple plan that fits your life.</li>
+  <li><strong>Movement:</strong> short daily walks or light exercises can improve energy and cramps.</li>
+  <li><strong>Logistics:</strong> reliable rides, backup plans, and an alarm/calendar reminder reduce missed sessions.</li>
+</ul>
+
+<h2>People you’ll meet</h2>
+<ul>
+  <li><strong>Dialysis nurse/tech:</strong> day-to-day treatment, access care, and blood pressure/cramp troubleshooting.</li>
+  <li><strong>Nephrologist:</strong> rounds regularly; sets your prescription and long-term plan.</li>
+  <li><strong>Dietitian:</strong> food, fluids, phosphorus/potassium, and weight goals.</li>
+  <li><strong>Social worker:</strong> stress, transportation, work/benefits paperwork, and community resources.</li>
+</ul>
+
+<h2>When to call (don’t wait)</h2>
+<ul>
+  <li><strong>Call the clinic now:</strong> fever, chills, new redness/pus at access, bleeding that won’t stop, severe cramps, chest pain, or shortness of breath.</li>
+  <li><strong>Go to ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, or you faint.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Questions to ask:</strong> What’s my current dry-weight goal? How do we adjust if I cramp or get dizzy? Which symptoms mean “call now” vs. wait for my next session?</p>
+</div>
+
+<p class="disclaimer">Educational only. Your dialysis team will tailor the plan to you.</p>
+
+<p>See also: <a href="/hub/dialysis/access.html" data-evt="dialysis:to-access">Access Options</a> · <a href="/hub/dialysis/schedule.html" data-evt="dialysis:to-schedule">Schedule & Planning</a> · <a href="/hub/dialysis/side-effects.html" data-evt="dialysis:to-side-effects">Side Effects & Safety</a></p>
+
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
