--- a/hub/transplant/surgery/index.html
+++ b/hub/transplant/surgery/index.html
@@ -42,7 +42,7 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="staff-surgery.html">Surgical Staff Roles</a></h2>
+    <h2><a href="/staff/index.html">Surgical Staff Roles</a></h2>
     <p>
       Meet the transplant surgeons, anesthesiologists, surgical nurses, and 
       other specialists who work together during your procedure.
