--- a/hub/transplant/index.html
+++ b/hub/transplant/index.html
@@ -35,7 +35,11 @@
   </p>
 
   <section class="testimonial-summary">
-    <h2><a href="preop/index.html">Pre-Op: Preparing for Transplant</a></h2>
+    <h2>
+      my (,,,)=( ,preop/,index,);
+       = defined() ?  : "";
+      qq(<a href=".html" data-evt="transplant:index:">)
+    Pre-Op: Preparing for Transplant</a></h2>
     <p>
       Learn what happens before your transplant, including evaluation and testing, 
       finding a donor, understanding risks, and meeting the pre-op care team.
@@ -43,7 +47,11 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="surgery/index.html">Transplant Surgery: Hospital Stay</a></h2>
+    <h2>
+      my (,,,)=( ,surgery/,index,);
+       = defined() ?  : "";
+      qq(<a href=".html" data-evt="transplant:index:">)
+    Transplant Surgery: Hospital Stay</a></h2>
     <p>
       Understand what happens in the hospital during the transplant surgery: 
       surgical staff roles, anesthesia, and immediate post-surgery recovery.
@@ -51,7 +59,11 @@
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="postop/index.html">Post-Op: Life After Transplant</a></h2>
+    <h2>
+      my (,,,)=( ,postop/,index,);
+       = defined() ?  : "";
+      qq(<a href=".html" data-evt="transplant:index:">)
+    Post-Op: Life After Transplant</a></h2>
     <p>
       Explore recovery after discharge, ongoing follow-up care, post-op staff 
       support, managing complications, and building a healthy life with 
