--- a/hub/transplant/surgery/index.html
+++ b/hub/transplant/surgery/index.html
@@ -32,30 +32,30 @@
     surgical care team, and walks through immediate post-surgery recovery.
   </p>
 
-  <section class="testimonial-summary">
-    <h2><a href="surgery.html">The Transplant Surgery</a></h2>
-    <p>
-      Learn how the surgery is performed, what happens during the operation, 
-      anesthesia details, and how the transplanted kidney is connected and 
-      begins working.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="surgery.html" data-evt="transplant:surgery:index:surgery">The Transplant Surgery</a></h2>
+  <p>
+    Learn how the surgery is performed, what happens during the operation,
+    anesthesia details, and how the transplanted kidney is connected and
+    begins working.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="/staff/index.html">Surgical Staff Roles</a></h2>
-    <p>
-      Meet the transplant surgeons, anesthesiologists, surgical nurses, and 
-      other specialists who work together during your procedure.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="staff/index.html" data-evt="transplant:surgery:index:staff">Surgical Staff Roles</a></h2>
+  <p>
+    Meet the transplant surgeons, anesthesiologists, surgical nurses, and other specialists who work together during your procedure.
+  </p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="recovery-inpatient.html">In-Hospital Recovery</a></h2>
-    <p>
-      Understand what happens immediately after surgery—time in recovery rooms, 
-      pain management, monitoring, and early movement exercises to aid healing.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="recovery-inpatient.html" data-evt="transplant:surgery:index:recovery-inpatient">In-Hospital Recovery</a></h2>
+  <p>
+    Understand what happens immediately after surgery—time in recovery rooms,
+    pain management, monitoring, and early movement exercises to aid healing.
+  </p>
+</section>
+
 
   <section class="callout">
     <p>
