--- a/hub/transplant/index.html
+++ b/hub/transplant/index.html
@@ -36,9 +36,7 @@
 
   <section class="testimonial-summary">
     <h2>
-      my (,,,)=( ,preop/,index,);
-       = defined() ?  : "";
-      qq(<a href=".html" data-evt="transplant:index:">)
+     <a href=".html" data-evt="transplant:index:">
     Pre-Op: Preparing for Transplant</a></h2>
     <p>
       Learn what happens before your transplant, including evaluation and testing, 
@@ -48,9 +46,7 @@
 
   <section class="testimonial-summary">
     <h2>
-      my (,,,)=( ,surgery/,index,);
-       = defined() ?  : "";
-      qq(<a href=".html" data-evt="transplant:index:">)
+    <a href=".html" data-evt="transplant:index:">
     Transplant Surgery: Hospital Stay</a></h2>
     <p>
       Understand what happens in the hospital during the transplant surgery: 
@@ -60,9 +56,7 @@
 
   <section class="testimonial-summary">
     <h2>
-      my (,,,)=( ,postop/,index,);
-       = defined() ?  : "";
-      qq(<a href=".html" data-evt="transplant:index:">)
+      <a href=".html" data-evt="transplant:index:">
     Post-Op: Life After Transplant</a></h2>
     <p>
       Explore recovery after discharge, ongoing follow-up care, post-op staff 
