--- a/testimonials/donor-nancy.html
+++ b/testimonials/donor-nancy.html
@@ -26,6 +26,8 @@
   <div data-include="/includes/header.html"></div>
 
   <main class="content" id="main">
+  <div data-include="/includes/testimonial-subnav.html"></div>
+
       <div class="testimonial-header">
     <h1>Nancy M. Stabins</h1>
     <p class="intro">
